--- a/view/adminhtml/templates/order/packaging/grid_gl.phtml
+++ b/view/adminhtml/templates/order/packaging/grid_gl.phtml
@@ -60,17 +60,22 @@ $viewModel = $block->getData('viewModel');
             <?php $i=0; ?>
             <?php /** @var \Magento\Sales\Model\Order\Shipment\Item $item */ ?>
             <?php /** @var \Magento\Sales\Model\Order\Item $_orderItem */ ?>
-            <?php foreach ($block->getCollection() as $item) : ?>
-                <?php
-                    $_order = $block->getShipment()->getOrder();
-                    $_orderItem = $_order->getItemById($item->getOrderItemId());
-                ?>
-                <?php if ($item->getIsVirtual()
-                    || ($_orderItem->isShipSeparately() && !($_orderItem->getParentItemId() || $_orderItem->getParentItem()))
-                    || (!$_orderItem->isShipSeparately() && ($_orderItem->getParentItemId() || $_orderItem->getParentItem()))): ?>
-                    <?php continue; ?>
-                <?php endif; ?>
-                <tr class="data-grid-controls-row data-row <?= ($i++ % 2 != 0) ? '_odd-row' : '' ?>">
+            <?php foreach ($block->getCollection() as $item) :
+                $_order = $block->getShipment()->getOrder();
+                $_orderItem = $_order->getItemById($item->getOrderItemId());
+                if ($item->getIsVirtual() ||
+                    (
+                        $_orderItem->isShipSeparately() &&
+                        !($_orderItem->getParentItemId() || $_orderItem->getParentItem())
+                    ) ||
+                    (
+                        !$_orderItem->isShipSeparately() &&
+                        ($_orderItem->getParentItemId() || $_orderItem->getParentItem())
+                    )
+                ) {
+                    continue;
+                } ?>
+                <tr class="data-grid-controls-row data-row <?= (($i+1) % 2 != 0) ? '_odd-row' : '' ?>">
                     <td class="data-grid-checkbox-cell">
                         <?php $id = $item->getId() ? $item->getId() : $item->getOrderItemId(); ?>
                         <label class="data-grid-checkbox-cell-inner">
@@ -99,10 +104,7 @@ $viewModel = $block->getData('viewModel');
                             <?php $selectedCountry = $_orderItem->getProduct()->getData('country_of_manufacture'); ?>
                             <?php foreach ($viewModel->getCountries() as $countryInfo) : ?>
                                 <option value="<?= $block->escapeHtmlAttr($countryInfo['value']) ?>"
-                                    <?php if ($countryInfo['value'] == $selectedCountry) : ?>
-                                        <?= /* @noEscape */ 'selected="selected"' ?>
-                                    <?php endif; ?>
-                                >
+                                    <?= /* @noEscape */ $countryInfo['value'] == $selectedCountry ? 'selected="selected"' : '' ?>>
                                     <?= $block->escapeHtml($countryInfo['label']); ?>
                                 </option>
                             <?php endforeach; ?>
@@ -125,11 +127,13 @@ $viewModel = $block->getData('viewModel');
                         />
                     </td>
                     <td>
-                        <input data-module="dhl_shipping" data-name="export_description"
+                        <input data-module="dhl_shipping"
+                               data-name="export_description"
                                type="text"
                                class="input-text admin__control-text validate-length maximum-length-50"
-                               title="<?= $block->escapeHtmlAttr(__('Export Description')) ?>" maxlength="50"
-                               value="<?= $block->escapeHtmlAttr($block->getExportDescription($_orderItem->getProductId())); ?>"/>
+                               value="<?= $block->escapeHtmlAttr($block->getExportDescription($_orderItem->getProductId())); ?>"
+                               title="<?= $block->escapeHtmlAttr(__('Export Description')) ?>"
+                               maxlength="50"/>
                     </td>
 
                     <td data-role="item-weight">
@@ -147,13 +151,22 @@ $viewModel = $block->getData('viewModel');
                         <?= $block->escapeHtml($item->getOrderItem()->getQtyOrdered()*1) ?>
                     </td>
                     <td>
-                        <input data-module="dhl_shipping" data-name="sku" type="hidden" name="sku" value="<?= $block->escapeHtmlAttr($item->getSku()); ?>">
+                        <input data-module="dhl_shipping"
+                               data-name="sku"
+                               type="hidden"
+                               name="sku"
+                               value="<?= $block->escapeHtmlAttr($item->getSku()); ?>">
                         <input type="hidden" name="price" value="<?= $block->escapeHtmlAttr($item->getPrice()) ?>">
                         <input type="text"
                                name="qty"
-                               value="<?= $block->escapeHtmlAttr($item->getQty()*1) ?>"
-                               class="input-text admin__control-text qty<?php if ($item->getOrderItem()->getIsQtyDecimal()): ?> qty-decimal<?php endif ?>">&nbsp;
-                        <button type="button" class="action-delete" data-action="package-delete-item" onclick="packaging.deleteItem(this);" style="display:none;">
+                               class="input-text admin__control-text
+                                qty<?= $item->getOrderItem()->getIsQtyDecimal() ? 'qty-decimal' : '' ?>"
+                               value="<?= $block->escapeHtmlAttr($item->getQty()*1) ?>">&nbsp;
+                        <button type="button"
+                                class="action-delete"
+                                data-action="package-delete-item"
+                                onclick="packaging.deleteItem(this);"
+                                style="display:none;">
                             <span><?= $block->escapeHtml(__('Delete')) ?></span>
                         </button>
                     </td>
