--- a/view/adminhtml/templates/order/packaging/grid_gl.phtml
+++ b/view/adminhtml/templates/order/packaging/grid_gl.phtml
@@ -122,18 +122,20 @@ $viewModel = $block->getData('viewModel');
                         <input data-module="dhl_shipping" data-name="tariff_number"
                                type="text"
                                class="input-text admin__control-text required-entry validate-length maximum-length-10"
-                               title="<?= $block->escapeHtmlAttr(__('Tariff Number')) ?>" minlength="4" maxlength="10"
+                               minlength="4" maxlength="10"
+                               title="<?= $block->escapeHtmlAttr(__('Tariff Number')) ?>"
                                value="<?= $block->escapeHtmlAttr($tariffNumber); ?>"
                         />
                     </td>
                     <td>
+                        <?php $exportDescription = $_orderItem->getProduct()->getData('dhl_export_description'); ?>
                         <input data-module="dhl_shipping"
                                data-name="export_description"
                                type="text"
                                class="input-text admin__control-text validate-length maximum-length-50"
-                               value="<?= $block->escapeHtmlAttr($block->getExportDescription($_orderItem->getProductId())); ?>"
+                               maxlength="50"
                                title="<?= $block->escapeHtmlAttr(__('Export Description')) ?>"
-                               maxlength="50"/>
+                               value="<?= $block->escapeHtmlAttr($exportDescription); ?>"/>
                     </td>
 
                     <td data-role="item-weight">
