DHLVM2-210: add hs Code to Tariff Number in packaging popup

--- a/view/adminhtml/templates/order/packaging/grid_bcs.phtml
+++ b/view/adminhtml/templates/order/packaging/grid_bcs.phtml
@@ -47,7 +47,7 @@ $viewModel = $block->getData('viewModel');
                     </th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Item Description')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Country of Origin')) ?></th>
-                    <th class="data-grid-th"><?= $block->escapeHtml(__('Tariff Number')) ?></th>
+                    <th class="data-grid-th"><?= $block->escapeHtml(__('Tariff Number (hs Code)')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Weight')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Customs Value')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Qty Ordered')) ?></th>
