--- a/view/adminhtml/templates/order/packaging/grid_gl.phtml
+++ b/view/adminhtml/templates/order/packaging/grid_gl.phtml
@@ -48,7 +48,7 @@ $viewModel = $block->getData('viewModel');
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Item Description')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Country of Origin')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Dangerous Goods Category')) ?></th>
-                    <th class="data-grid-th"><?= $block->escapeHtml(__('Tariff Number')) ?></th>
+                    <th class="data-grid-th"><?= $block->escapeHtml(__('Tariff Number (hs Code)')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Export Description')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Weight')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Customs Value')) ?></th>
