DHLVM2-250: product name as fallback for export description

--- a/view/adminhtml/templates/order/packaging/grid_gl.phtml
+++ b/view/adminhtml/templates/order/packaging/grid_gl.phtml
@@ -128,7 +128,7 @@ $viewModel = $block->getData('viewModel');
                         />
                     </td>
                     <td>
-                        <?php $exportDescription = $_orderItem->getProduct()->getData('dhl_export_description'); ?>
+                        <?php $exportDescription = $viewModel->getExportDescription($_orderItem) ?>
                         <input data-module="dhl_shipping"
                                data-name="export_description"
                                type="text"
